Basic POC functional

--- a/config_dist.toml
+++ b/config_dist.toml
@@ -1,3 +1,4 @@
 Name = "your_twitch_username"
 Password = "oauth:xxxxxxxxxxxxxxxxxxxxxxxxxxxxxx"
 Server = "irc.twitch.tv:6667"
+AutoJoin = ["#roto_", "#manOfsnow", "#cuddli"]
