Added !scm commands. Started work on viewer/backpack modules

--- a/config_dist.toml
+++ b/config_dist.toml
@@ -4,7 +4,8 @@ Server = "irc.twitch.tv:6667"
 AutoJoin = ["#roto_", "#cuddli"]
 ApiKey = "your_steam_api_key"
 SteamID = "00000000000000000"
-DebugChannel = "#roto_"
+DebugChannel = "#roto_"me
 VerboseCallbackHandler = false
 Debug = false
 Database = "twirc.db"
+BackpackTFApiKey = ""
